# ungoogled-chromium

./: flags.gn
patches/extra/ungoogled-chromium/: prepopulated-search-engines.patch
